--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,7 @@
    .body {
     background-color: black;
     height: fit-content;
-    -webkit-overflow-scrolling: touch; /* Lets it scroll lazy */
+    scroll-behavior: smooth;
    }
   
    .navbar {
@@ -155,6 +155,7 @@
     border-radius: 3vh;
     text-decoration: none;
     text-transform: uppercase;
+    text-shadow: 0 0 0 1.5px black;
    }
 
    .cta-button:hover {
@@ -194,7 +195,6 @@
     margin-top: 2vw;
     margin-left: 7.3vw;
     /* background-color: aliceblue; */
-    
 }
 
 button {
@@ -244,7 +244,7 @@ button.active {
 }
 
 .O-mne h1 {
-    margin-top: 1.8vh;
+    margin-top: 1.8vw;
     margin-left: 6vw;
     color: #9b1313;
     font-size: 2.5vw;
@@ -268,7 +268,7 @@ button.active {
     font-size: 2vw;
     font-weight: 500;
     font-stretch: semi-condensed;
-    text-shadow: 0 0 0.1px red;
+    text-shadow: 0 0 0.1px #555;
 }
 
 #toggle-1 p {
@@ -298,7 +298,6 @@ button.active {
     font-size: 3vw;
     font-weight: 600;
     text-transform: uppercase;
-    text-shadow: 0 0 1.5px #efbf04;
 }
 
 .Sluzby .normal-text {
@@ -349,7 +348,7 @@ button.active {
     margin: 0; /* Remove margin */
     color: #efbf04;
     font-stretch: condensed;
-    text-shadow: 0 0 3px red;
+    text-shadow: 0 0 5px black;
 }
 
 .hover-text {
@@ -366,7 +365,7 @@ button.active {
     display: block; /* Show hover text on hover */
     color: #efbf04;
     font-stretch: condensed;
-    text-shadow: 0 0 3px red;
+    text-shadow: 0 0 5px black;
 }
 
 .container-fluid-footer {
@@ -378,14 +377,7 @@ button.active {
 
 .container-fluid-footer hr {
     color: #efbf04;
-    margin-bottom: -1.6vw;
-}
-
-.container-fluid-footer .bananas-icon {
-    width: 20px;
-    height: auto;
-    display: inline-flex;
-    margin-bottom: -0.35vw;
+    margin-bottom: -2vw;
 }
 
 .container-fluid-footer #footer-text {
@@ -410,6 +402,7 @@ button.active {
     border-radius: 3vh;
     text-decoration: none;
     text-transform: uppercase;
+    text-shadow: 0 0 0 1.5px black;
    }
 
    .cta-button-2:hover {
