updated toggle-button-1 to always be active on load; along with minor adjusts to both cta-buttons box-shadow.

--- a/static/style.css
+++ b/static/style.css
@@ -159,13 +159,13 @@
     text-decoration: none;
     text-transform: uppercase;
     text-shadow: 0 0 0 1.5px black;
-    box-shadow: 1.5px 1.5px 3px rgba(221, 5, 5, 0.9);
+    box-shadow: 1.8px 1.8px 3px rgba(221, 5, 5, 0.9);
    }
 
    .cta-button:hover {
     color: black;
     background-color: whitesmoke;
-    box-shadow: 1.5px 1.5px 3px #efbf04;
+    box-shadow: 1.8px 1.8px 3px #efbf04;
    }
 
 
@@ -264,6 +264,7 @@ button.active {
     font-size: 2.8vw;
     font-weight: 900;
     text-transform: uppercase;
+    text-shadow: 0.5px 0.5px 0.5px #efbf04;
 }
 
 .O-mne p {
@@ -297,6 +298,7 @@ button.active {
     color: whitesmoke;
     text-align: center;
     padding-top: 5vw;
+    /* text-decoration: underline 1.5px red; */
 }
 
 .Sluzby h1 {
@@ -408,11 +410,11 @@ button.active {
     text-decoration: none;
     text-transform: uppercase;
     text-shadow: 0 0 0 1.5px black;
-    box-shadow: 1.5px 1.5px 3px rgba(221, 5, 5, 0.9);
+    box-shadow: 1.8px 1.8px 3px rgba(221, 5, 5, 0.9);
    }
 
    .cta-button-2:hover {
     color: black;
     background-color: whitesmoke;
-    box-shadow: 1.5px 1.5px 3px #efbf04;
+    box-shadow: 1.8px 1.8px 3px #efbf04;
    }
