--- a/static/style.css
+++ b/static/style.css
@@ -169,7 +169,7 @@
    }
 
 
-.divider {
+   .divider {
     position: relative;
     width: 100%;
     height: fit-content;
@@ -189,6 +189,14 @@
     position: relative;
     width: 100%;
     height: 1vw;
+    background-color: #efbf04;
+    z-index: 98;
+}
+
+.divider-3 {
+    position: relative;
+    width: 100%;
+    height: 0.5vw;
     background-color: #efbf04;
     z-index: 98;
 }
@@ -399,6 +407,97 @@ button.active {
     text-shadow: 0 0 5px black;
 }
 
+.cta-div-2 {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: -4vw;
+    margin-bottom: 2vw;
+}
+
+.cta-button-2 {
+    position: relative;
+    color: #9b1313;
+    font-size: 1.5vw;
+    font-weight: 600;
+    background-color: #efbf04;
+    padding: 0.8vh 1vh;
+    border-radius: 3vh;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-shadow: 0 0 0 1.5px black;
+    box-shadow: 1.8px 1.8px 3px rgba(221, 5, 5, 0.9);
+}
+
+.cta-button-2:hover {
+    color: black;
+    background-color: whitesmoke;
+    box-shadow: 1.8px 1.8px 3px #efbf04;
+}
+
+.Kontakt {
+    position: relative;
+    border-left: 1px solid #efbf04;
+    border-right: 1px solid #efbf04;
+}
+
+.Kontakt h1 {
+    color: whitesmoke;
+    padding-top: 5vw;
+    padding-bottom: 4vw;
+    font-size: 3vw;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.button-grid {
+    display: flex;
+    gap: 3vw;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 4vw;
+}
+
+.mailto-button {
+    position: relative;
+    color: #9b1313;
+    font-size: 1.5vw;
+    font-weight: 600;
+    background-color: #efbf04;
+    padding: 0.8vh 1vh;
+    border-radius: 3vh;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-shadow: 0 0 0 1.5px black;
+    box-shadow: 1.8px 1.8px 3px rgba(221, 5, 5, 0.9);
+}
+
+.mailto-button:hover {
+    color: black;
+    background-color: whitesmoke;
+    box-shadow: 1.8px 1.8px 3px #efbf04;
+}
+
+.instagram-button {
+    position: relative;
+    color: #9b1313;
+    font-size: 1.5vw;
+    font-weight: 600;
+    background-color: #efbf04;
+    padding: 0.8vh 1vh;
+    border-radius: 3vh;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-shadow: 0 0 0 1.5px black;
+    box-shadow: 1.8px 1.8px 3px rgba(221, 5, 5, 0.9);
+}
+
+.instagram-button:hover {
+    color: black;
+    background-color: whitesmoke;
+    box-shadow: 1.8px 1.8px 3px #efbf04;
+}
+
 .container-fluid-footer {
     padding-left: 2vw;
     padding-right: 3vw;
@@ -416,29 +515,3 @@ button.active {
     color: #efbf04;
 }
 
-.cta-div-2 {
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    margin-top: -4.2vw;
-}
-
-.cta-button-2 {
-    position: relative;
-    color: #9b1313;
-    font-size: 1.5vw;
-    font-weight: 600;
-    background-color: #efbf04;
-    padding: 0.8vh 1vh;
-    border-radius: 3vh;
-    text-decoration: none;
-    text-transform: uppercase;
-    text-shadow: 0 0 0 1.5px black;
-    box-shadow: 1.8px 1.8px 3px rgba(221, 5, 5, 0.9);
-   }
-
-   .cta-button-2:hover {
-    color: black;
-    background-color: whitesmoke;
-    box-shadow: 1.8px 1.8px 3px #efbf04;
-   }
