--- a/static/style.css
+++ b/static/style.css
@@ -89,6 +89,14 @@
     text-decoration: underline 2px #9b1313;
    }
 
+   .offcanvas-header .btn-close {
+    background-size: 50%;
+}
+
+   .offcanvas-header .btn-close:hover {
+    background-color: #efbf04;
+   }
+
    .header {
     position: inherit;
     padding-top: 35px;
@@ -175,6 +183,7 @@
     height: fit-content;
     background-color: #efbf04;
     z-index: 98;
+    box-shadow: 1px 0.5px 5px 1.5px #555;
 }
 
 .divider img {
@@ -191,6 +200,7 @@
     height: 1vw;
     background-color: #efbf04;
     z-index: 98;
+    box-shadow: 1px 0.5px 4px 0.5px #555;
 }
 
 .divider-3 {
@@ -199,6 +209,7 @@
     height: 0.5vw;
     background-color: #efbf04;
     z-index: 98;
+    box-shadow: 1px 0.5px 3px 0.3px #555;
 }
 
 .button-container {
@@ -447,7 +458,17 @@ button.active {
     padding-bottom: 4vw;
     font-size: 3vw;
     text-transform: uppercase;
+    text-decoration: dotted;
     text-align: center;
+}
+
+.Kontakt p {
+    color: #efbf04;
+    text-align: center;
+    font-size: 2vw;
+    text-transform: uppercase;
+    padding-bottom: 4vw;
+    text-shadow: 0.5px 0.5px red;
 }
 
 .button-grid {
