--- a/static/style.css
+++ b/static/style.css
@@ -164,7 +164,7 @@
     font-size: 1.5vw;
     font-weight: 600;
     background-color: #efbf04;
-    padding: 0.8vh 1vh;
+    padding: 0.5vh 1vh;
     border-radius: 3vh;
     text-decoration: none;
     text-transform: uppercase;
@@ -186,14 +186,29 @@
     background-color: #efbf04;
     z-index: 98;
     box-shadow: 1px 0.5px 5px 1.5px #555;
+    display: flex;
+    justify-content: center;
+    gap: 5vw;
 }
 
 .divider img {
     position: relative;
-    margin-left: 48%;
     height: 6vw;
     width: auto;
     padding: 0.5vw;
+}
+
+.divider .divider-image-2 {
+    position: relative;
+    height: 7vw;
+    width: auto;
+}
+
+.divider .divider-image-3 {
+    position: relative;
+    height: 5vw;
+    width: auto;
+    margin-top: 1vh;
 }
 
 .divider-2 {
@@ -271,8 +286,12 @@ button.active {
    object-fit: cover;
 }
 
+.O-mne-image img:hover {
+    transform: scale(1.05);
+}
+
 .O-mne h1 {
-    margin-top: 1.8vw;
+    margin-top: 8.5vw;
     margin-left: 6vw;
     color: #9b1313;
     font-size: 2.5vw;
@@ -282,6 +301,7 @@ button.active {
 }
 
 .O-mne h2 {
+    margin-top: 1vw;
     margin-left: 7.3vw;
     color: whitesmoke;
     font-size: 2.8vw;
@@ -292,7 +312,7 @@ button.active {
 
 .O-mne p {
     margin-left: 7.3vw;
-    margin-top: 10px;
+    padding-top: 3vw;
     color: whitesmoke;
     font-size: 2vw;
     font-weight: 500;
@@ -300,12 +320,62 @@ button.active {
     text-shadow: 0 0 0.1px #555;
 }
 
-#toggle-1 p {
-    margin-top: 1.5vw;
+.uspechy {
+    background-color: black;
+    height: 50vw;
+    display: flex;
+    flex-direction: row-reverse;
+    border-left: 1px solid #efbf04;
+    border-right: 1px solid #efbf04;
 }
 
-#toggle-2 p {
-    margin-top: -1.5vw;
+.uspechy-image {
+    position: inherit;
+    height: auto;
+    width: fit-content;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.uspechy-image img {
+   height: 50vw;
+   width: auto;
+   object-fit: cover;
+}
+
+.uspechy-image img:hover {
+    transform: scale(1.08);
+}
+
+.uspechy h1 {
+    font-size: 3vw;
+    font-weight: 700;
+    color: #9b1313;
+    text-align: center;
+    padding-top: 5vw;
+    text-transform: uppercase;
+}
+
+.uspechy h2 {
+    font-size: 3vw;
+    font-weight: 500;
+    text-align: left;
+    margin-top: 3vw;
+    margin-left: 3vw;
+    padding-bottom: 4vw;
+    text-shadow: 0.5px 0.5px 0.5px #efbf04;
+}
+
+.uspechy-text {
+    text-align: left;
+    justify-content: left;
+    margin-top: 10px;
+    margin-right: 7.5vw;
+    color: whitesmoke;
+    font-size: 2vw;
+    font-weight: 500;
+    font-stretch: semi-condensed;
+    text-shadow: 0 0 0.1px #555;   
 }
 
 .Sluzby {
@@ -342,13 +412,13 @@ button.active {
     justify-content: space-between;
     gap: 5vw; /* Space between images */
     padding: 6vw;
+    justify-content: center;
 }
 
 .image-item {
     position: relative;
     width: 100%; /* Set width for each image item */
     overflow: hidden; /* Prevent overflow */
-    left: 5%;
 }
 
 .image-item:hover {
@@ -454,11 +524,12 @@ button.active {
     position: relative;
     border-left: 1px solid #efbf04;
     border-right: 1px solid #efbf04;
+    padding: 8vw;
 }
 
 .Kontakt h1 {
     color: whitesmoke;
-    padding-top: 5vw;
+    padding-top: 3vw;
     padding-bottom: 4vw;
     font-size: 3vw;
     text-transform: uppercase;
@@ -489,7 +560,7 @@ button.active {
     font-size: 1.5vw;
     font-weight: 600;
     background-color: #efbf04;
-    padding: 0.8vh 1vh;
+    padding: 0.5vh 1vh;
     border-radius: 3vh;
     text-decoration: none;
     text-transform: uppercase;
@@ -509,7 +580,7 @@ button.active {
     font-size: 1.5vw;
     font-weight: 600;
     background-color: #efbf04;
-    padding: 0.8vh 1vh;
+    padding: 0.5vh 1vh;
     border-radius: 3vh;
     text-decoration: none;
     text-transform: uppercase;
@@ -524,19 +595,13 @@ button.active {
 }
 
 .container-fluid-footer {
-    padding-left: 2vw;
-    padding-right: 3vw;
+    border-top: 1px solid #efbf04;
     border-left: 1px solid #efbf04;
     border-right: 1px solid #efbf04;
 }
 
-.container-fluid-footer hr {
-    color: #efbf04;
-    margin-bottom: -2vw;
-}
-
 .container-fluid-footer #footer-text {
-    font-size: 1.8vw;
+    font-size: 1.5vw;
     color: #efbf04;
 }
 
@@ -544,5 +609,48 @@ button.active {
     .offcanvas {
       max-width: min-content;
     }
+    .cta-button {
+      position: absolute;
+      transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+      top: 52.5vw;
+      left: 15.7%;
+    }
+    .uspechy-text {
+        margin-right: 3vw;
+    }
+    .uspechy h2 {
+        margin-left: 9vw;
+    }
+    .uspechy-text ul {
+        list-style: none;
+        display: grid;
+        margin-top: -2vw;
+    }
+    .bananas-icon {
+        width: 5%;
+        margin-left: 6vw;
+    }
+    .k-g-logo {
+        width: fit-content;
+        height: auto;
+        margin-top: -11vh;
+        margin-left: 28vw;
+    }
+    .k-g-logo img {
+        width: 30%;
+    }
+    .ig-logo img {
+        margin-top: -11vh;
+        width: 15;
+    }
+    .Kontakt {
+        padding: 5vw;
+    }
+    .container-fluid-footer {
+        max-height: fit-content;
+    }
+    .container-fluid-footer #footer-text {
+        font-size: 2.5vw;
+    }
   }
-
