Adjustment of font-size in navbar and typo in achievements text

--- a/static/style.css
+++ b/static/style.css
@@ -77,6 +77,10 @@
      font-size: 1.82vw;
    }
 
+   .nav-item #uspechy-link {
+    font-size: 1.82vw;
+   }
+
    .nav-item #Sluzby-link {
     font-size: 1.82vw;
    }
